WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102249
Fix compiler warnings about signed/unsigned comparison on i386
https://bugs.webkit.org/show_bug.cgi?id=102249
Summary
Fix compiler warnings about signed/unsigned comparison on i386
Thiago Marcos P. Santos
Reported
2012-11-14 10:13:08 PST
Breaks ports building with -Werror.
Attachments
Patch
(2.15 KB, patch)
2012-11-14 10:30 PST
,
Thiago Marcos P. Santos
no flags
Details
Formatted Diff
Diff
Patch
(2.15 KB, patch)
2012-11-14 10:35 PST
,
Thiago Marcos P. Santos
no flags
Details
Formatted Diff
Diff
Patch
(2.19 KB, patch)
2012-11-14 13:17 PST
,
Thiago Marcos P. Santos
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Thiago Marcos P. Santos
Comment 1
2012-11-14 10:30:38 PST
Created
attachment 174197
[details]
Patch
Thiago Marcos P. Santos
Comment 2
2012-11-14 10:35:50 PST
Created
attachment 174199
[details]
Patch Fixed ChangeLog.
Mark Lam
Comment 3
2012-11-14 10:48:21 PST
Comment on
attachment 174199
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=174199&action=review
> Source/JavaScriptCore/ChangeLog:8 > + Add casting to unsigned to shut gcc warnings. Build was broken on
"shut" ==> "shut up" or "quiet down"
> Source/JavaScriptCore/ChangeLog:9 > + ports compiling with -Werror.
It's not applicable to every port. So, "ports" ==> "JSVALUE32_64 ports".
> Source/JavaScriptCore/llint/LLIntData.cpp:94 > + ASSERT(JSValue::LowestTag == static_cast<unsigned> -7);
Conceptually, this is good. But I'm not sure of the style. Elsewhere in the code, I either see examples like "unsigned(-7)" or "static_cast<unsigned>(-7)". I'd be more comfortable if you changed this to use one of those syntax.
kov's GTK+ EWS bot
Comment 4
2012-11-14 10:51:03 PST
Comment on
attachment 174199
[details]
Patch
Attachment 174199
[details]
did not pass gtk-ews (gtk): Output:
http://queues.webkit.org/results/14833398
Thiago Marcos P. Santos
Comment 5
2012-11-14 13:17:51 PST
Created
attachment 174238
[details]
Patch
Mark Lam
Comment 6
2012-11-14 13:19:45 PST
LGTM, but need someone else to r+ cq+.
WebKit Review Bot
Comment 7
2012-11-15 04:46:27 PST
Comment on
attachment 174238
[details]
Patch Clearing flags on attachment: 174238 Committed
r134763
: <
http://trac.webkit.org/changeset/134763
>
WebKit Review Bot
Comment 8
2012-11-15 04:46:32 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug