Fix compiler warnings about signed/unsigned comparison on i386 https://bugs.webkit.org/show_bug.cgi?id=102249

Patch by Thiago Marcos P. Santos <thiago.santos@intel.com> on 2012-11-15
Reviewed by Kenneth Rohde Christiansen.

Add casting to unsigned to shut up gcc warnings. Build was broken on
JSVALUE32_64 ports compiling with -Werror.

* llint/LLIntData.cpp:
(JSC::LLInt::Data::performAssertions):

Canonical link: https://commits.webkit.org/120472@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134763 268f45cc-cd09-0410-ab3c-d52691b4dbfc