Source/JavaScriptCore/llint/LLIntData.cpp
@@ -84,14 +84,14 @@ void Data::performAssertions(JSGlobalData& globalData)
     ASSERT(OBJECT_OFFSETOF(EncodedValueDescriptor, asBits.payload) == 0);
 #endif
 #if USE(JSVALUE32_64)
-    ASSERT(JSValue::Int32Tag == -1);
-    ASSERT(JSValue::BooleanTag == -2);
-    ASSERT(JSValue::NullTag == -3);
-    ASSERT(JSValue::UndefinedTag == -4);
-    ASSERT(JSValue::CellTag == -5);
-    ASSERT(JSValue::EmptyValueTag == -6);
-    ASSERT(JSValue::DeletedValueTag == -7);
-    ASSERT(JSValue::LowestTag == -7);
+    ASSERT(JSValue::Int32Tag == static_cast<unsigned>(-1));
+    ASSERT(JSValue::BooleanTag == static_cast<unsigned>(-2));
+    ASSERT(JSValue::NullTag == static_cast<unsigned>(-3));
+    ASSERT(JSValue::UndefinedTag == static_cast<unsigned>(-4));
+    ASSERT(JSValue::CellTag == static_cast<unsigned>(-5));
+    ASSERT(JSValue::EmptyValueTag == static_cast<unsigned>(-6));
+    ASSERT(JSValue::DeletedValueTag == static_cast<unsigned>(-7));
+    ASSERT(JSValue::LowestTag == static_cast<unsigned>(-7));
 #else
     ASSERT(TagBitTypeOther == 0x2);
     ASSERT(TagBitBool == 0x4);
